--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <section class="city-images">
             <div class="images-of-cities">
                 <div class="city-image">
-                    <img src="img/3.jpg" alt=" city image1">
-                    <h3>City Example 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, enim?</p>
+                    <img src="img/Nairobi.jpg" alt=" city image1">
+                    <h3>City of Nairobi</h3>
+                    <p>Nairobi is Kenya’s capital city. Nairobi has a lovely climate with warm and cool atmosphere for most of the year. The average temperature in Nairobi in a year is 11.1 °C. The brightest and coolest part of the year is from December to March, when temperatures average is about 10°C.</p>
                 </div>
                 <div class="city-image">
                     <img src="img/4.jpg" alt=" city image2">
-                    <h3>City Example 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, enim?</p>
+                    <h3>City of Dubai</h3>
+                    <p>Dubai is one of the most popular cities in the United Arab Emirates and is known for the luxurious lifestyle, trendy fashion, and lively nightlife. Located on the southeast coast of the Persian Gulf, this beautiful city is the capital of The Emirate of Dubai.</p>
                 </div>
             <div class="city-image">
                     <img src="img/5.jpg" alt=" city image3">
@@ -84,7 +84,7 @@
         </section>
         
         <footer>
-            <p>&copy;Beautiful-Cities 2020</p>     
+            <p>&copy;Beautiful-Cities By: Dennis Ngethe 2020</p>     
         </footer>
    </div>
 </body>
